import type * as grpc from '@grpc/grpc-js';
import type { EnumTypeDefinition, MessageTypeDefinition } from '@grpc/proto-loader';


type SubtypeConstructor<Constructor extends new (...args: any) => any, Subtype> = {
  new(...args: ConstructorParameters<Constructor>): Subtype;
};

export interface ProtoGrpcType {
  vixen: {
    parser: {
      AccountStateProto: EnumTypeDefinition
      AmmConfigProto: MessageTypeDefinition
      AmountToUiAmountAccountsProto: MessageTypeDefinition
      AmountToUiAmountDataProto: MessageTypeDefinition
      AmountToUiAmountIxProto: MessageTypeDefinition
      ApplyPendingBalanceAccountsProto: MessageTypeDefinition
      ApplyPendingBalanceIxProto: MessageTypeDefinition
      ApproveAccountAccountsProto: MessageTypeDefinition
      ApproveAccountIxProto: MessageTypeDefinition
      ApproveAccountsProto: MessageTypeDefinition
      ApproveCheckedAccountsProto: MessageTypeDefinition
      ApproveCheckedDataProto: MessageTypeDefinition
      ApproveCheckedIxProto: MessageTypeDefinition
      ApproveDataProto: MessageTypeDefinition
      ApproveIxProto: MessageTypeDefinition
      AuthorityType: EnumTypeDefinition
      BurnAccountsProto: MessageTypeDefinition
      BurnCheckedAccountsProto: MessageTypeDefinition
      BurnCheckedDataProto: MessageTypeDefinition
      BurnCheckedIxProto: MessageTypeDefinition
      BurnDataProto: MessageTypeDefinition
      BurnIxProto: MessageTypeDefinition
      CloseAccountAccountsProto: MessageTypeDefinition
      CloseAccountIxProto: MessageTypeDefinition
      CommonExtensionIxProto: MessageTypeDefinition
      CommonExtensionIxsProto: MessageTypeDefinition
      ConfidentialHarvestWithheldTokensToMintAccountsProto: MessageTypeDefinition
      ConfidentialHarvestWithheldTokensToMintIxProto: MessageTypeDefinition
      ConfidentialTransferAccountProto: MessageTypeDefinition
      ConfidentialTransferAccountsProto: MessageTypeDefinition
      ConfidentialTransferExtIxProto: MessageTypeDefinition
      ConfidentialTransferFeeAmountProto: MessageTypeDefinition
      ConfidentialTransferFeeConfigProto: MessageTypeDefinition
      ConfidentialTransferFeeIxProto: MessageTypeDefinition
      ConfidentialTransferIxProto: MessageTypeDefinition
      ConfidentialTransferMintProto: MessageTypeDefinition
      ConfidentialWithdrawWithheldTokensFromAccountsAccountsProto: MessageTypeDefinition
      ConfidentialWithdrawWithheldTokensFromAccountsIxProto: MessageTypeDefinition
      ConfidentialWithdrawWithheldTokensFromMintAccountsProto: MessageTypeDefinition
      ConfidentialWithdrawWithheldTokensFromMintIxProto: MessageTypeDefinition
      ConfigureAccountAccountsProto: MessageTypeDefinition
      ConfigureAccountIxProto: MessageTypeDefinition
      CpiGuardIxProto: MessageTypeDefinition
      CpiGuardProto: MessageTypeDefinition
      CreateNativeMintAccountsProto: MessageTypeDefinition
      CreateNativeMintIxProto: MessageTypeDefinition
      CreditsAccountsProto: MessageTypeDefinition
      DefaultAccountStateIxProto: MessageTypeDefinition
      DefaultAccountStateProto: MessageTypeDefinition
      DepositAccountsProto: MessageTypeDefinition
      DepositIxProto: MessageTypeDefinition
      DisableAccountsProto: MessageTypeDefinition
      DisableConfidentialCreditsIxProto: MessageTypeDefinition
      DisableHarvestToMintAccountsProto: MessageTypeDefinition
      DisableHarvestToMintIxProto: MessageTypeDefinition
      DisableIxProto: MessageTypeDefinition
      DisableNonConfidentialCreditsIxProto: MessageTypeDefinition
      EmitAccountsProto: MessageTypeDefinition
      EmitDataProto: MessageTypeDefinition
      EmitIxProto: MessageTypeDefinition
      EmptyAccountAccountsProto: MessageTypeDefinition
      EmptyAccountIxProto: MessageTypeDefinition
      EnableAccountsProto: MessageTypeDefinition
      EnableConfidentialCreditsIxProto: MessageTypeDefinition
      EnableHarvestToMintAccountsProto: MessageTypeDefinition
      EnableHarvestToMintIxProto: MessageTypeDefinition
      EnableIxProto: MessageTypeDefinition
      EnableNonConfidentialCreditsIxProto: MessageTypeDefinition
      ExtInitializeAccountsProto: MessageTypeDefinition
      ExtInitializeIxProto: MessageTypeDefinition
      ExtendedMintProto: MessageTypeDefinition
      ExtendedTokenAccountProto: MessageTypeDefinition
      ExtensionDataProto: MessageTypeDefinition
      ExtensionType: EnumTypeDefinition
      ExtensionWithCommonIxsProto: EnumTypeDefinition
      FeeTierProto: MessageTypeDefinition
      FreezeAccountAccountsProto: MessageTypeDefinition
      FreezeAccountIxProto: MessageTypeDefinition
      GetAccountDataSizeAccountsProto: MessageTypeDefinition
      GetAccountDataSizeIxProto: MessageTypeDefinition
      GroupMemberPointerIxProto: MessageTypeDefinition
      GroupMemberPointerProto: MessageTypeDefinition
      GroupPointerIxProto: MessageTypeDefinition
      GroupPointerProto: MessageTypeDefinition
      HarvestWithheldTokensToMintAccountsProto: MessageTypeDefinition
      HarvestWithheldTokensToMintIxProto: MessageTypeDefinition
      ImmutableOwnerProto: MessageTypeDefinition
      InitializeAccount2AccountsProto: MessageTypeDefinition
      InitializeAccount2IxProto: MessageTypeDefinition
      InitializeAccount3IxProto: MessageTypeDefinition
      InitializeAccountAccountsProto: MessageTypeDefinition
      InitializeAccountData2Proto: MessageTypeDefinition
      InitializeAccountDataProto: MessageTypeDefinition
      InitializeAccountIxProto: MessageTypeDefinition
      InitializeAccountsProto: MessageTypeDefinition
      InitializeConfidentialMintAccountsProto: MessageTypeDefinition
      InitializeConfidentialMintIxProto: MessageTypeDefinition
      InitializeConfidentialTransferFeeConfigAccountsProto: MessageTypeDefinition
      InitializeConfidentialTransferFeeConfigIxProto: MessageTypeDefinition
      InitializeDataProto: MessageTypeDefinition
      InitializeGroupAccountsProto: MessageTypeDefinition
      InitializeGroupDataProto: MessageTypeDefinition
      InitializeGroupIxProto: MessageTypeDefinition
      InitializeImmutableOwnerAccountsProto: MessageTypeDefinition
      InitializeImmutableOwnerIxProto: MessageTypeDefinition
      InitializeIxProto: MessageTypeDefinition
      InitializeMemberAccountsProto: MessageTypeDefinition
      InitializeMemberIxProto: MessageTypeDefinition
      InitializeMintAccountsProto: MessageTypeDefinition
      InitializeMintCloseAuthorityAccountsProto: MessageTypeDefinition
      InitializeMintCloseAuthorityDataProto: MessageTypeDefinition
      InitializeMintCloseAuthorityIxProto: MessageTypeDefinition
      InitializeMintDataProto: MessageTypeDefinition
      InitializeMintIxProto: MessageTypeDefinition
      InitializeMultisigAccountsProto: MessageTypeDefinition
      InitializeMultisigDataProto: MessageTypeDefinition
      InitializeMultisigIxProto: MessageTypeDefinition
      InitializeNonTransferableMintAccountsProto: MessageTypeDefinition
      InitializeNonTransferableMintIxProto: MessageTypeDefinition
      InitializePermanentDelegateAccountsProto: MessageTypeDefinition
      InitializePermanentDelegateDataProto: MessageTypeDefinition
      InitializePermanentDelegateIxProto: MessageTypeDefinition
      InitializeTransferFeeConfigAccountsProto: MessageTypeDefinition
      InitializeTransferFeeConfigDataProto: MessageTypeDefinition
      InitializeTransferFeeConfigIxProto: MessageTypeDefinition
      InterestBearingConfigProto: MessageTypeDefinition
      InterestBearingMintIxProto: MessageTypeDefinition
      KeyValue: MessageTypeDefinition
      MemoTransferIxProto: MessageTypeDefinition
      MemoTransferProto: MessageTypeDefinition
      MetadataPointerIxProto: MessageTypeDefinition
      MetadataPointerProto: MessageTypeDefinition
      MintCloseAuthorityProto: MessageTypeDefinition
      MintProto: MessageTypeDefinition
      MintToAccountsProto: MessageTypeDefinition
      MintToCheckedAccountsProto: MessageTypeDefinition
      MintToCheckedDataProto: MessageTypeDefinition
      MintToCheckedIxProto: MessageTypeDefinition
      MintToDataProto: MessageTypeDefinition
      MintToIxProto: MessageTypeDefinition
      MultisigProto: MessageTypeDefinition
      NonTransferableAccountProto: MessageTypeDefinition
      NonTransferableProto: MessageTypeDefinition
      ObservationProto: MessageTypeDefinition
      ObservationStateProto: MessageTypeDefinition
      OperationStateProto: MessageTypeDefinition
      OrcaPositionRewardInfoProto: MessageTypeDefinition
      OrcaProgramIxProto: MessageTypeDefinition
      OrcaProgramStateProto: MessageTypeDefinition
      OrcaSwapAccountsProto: MessageTypeDefinition
      OrcaSwapInstructionProto: MessageTypeDefinition
      OrcaSwapIxDataProto: MessageTypeDefinition
      OrcaSwapV2AccountsProto: MessageTypeDefinition
      OrcaSwapV2InstructionProto: MessageTypeDefinition
      OrcaSwapV2IxDataProto: MessageTypeDefinition
      OrcaTickArrayProto: MessageTypeDefinition
      OrcaTickProto: MessageTypeDefinition
      PermanentDelegateProto: MessageTypeDefinition
      PersonalPositionStateProto: MessageTypeDefinition
      PoolStateProto: MessageTypeDefinition
      PositionProto: MessageTypeDefinition
      ProtocolPositionStateProto: MessageTypeDefinition
      RaydiumPositionRewardInfoProto: MessageTypeDefinition
      RaydiumProgramIxProto: MessageTypeDefinition
      RaydiumProgramStateProto: MessageTypeDefinition
      RaydiumSwapAccountsProto: MessageTypeDefinition
      RaydiumSwapInstructionProto: MessageTypeDefinition
      RaydiumSwapIxDataProto: MessageTypeDefinition
      RaydiumSwapV2AccountsProto: MessageTypeDefinition
      RaydiumSwapV2InstructionProto: MessageTypeDefinition
      RaydiumTickArrayStateProto: MessageTypeDefinition
      RaydiumTickStateProto: MessageTypeDefinition
      ReallocateAccountsProto: MessageTypeDefinition
      ReallocateDataProto: MessageTypeDefinition
      ReallocateIxProto: MessageTypeDefinition
      RemoveKeyDataProto: MessageTypeDefinition
      RemoveKeyIxProto: MessageTypeDefinition
      RevokeAccountsProto: MessageTypeDefinition
      RevokeIxProto: MessageTypeDefinition
      RewardInfoProto: MessageTypeDefinition
      RmoveKeyAccountsProto: MessageTypeDefinition
      SetAuthorityAccountsProto: MessageTypeDefinition
      SetAuthorityDataProto: MessageTypeDefinition
      SetAuthorityIxProto: MessageTypeDefinition
      SetTransferFeeAccountsProto: MessageTypeDefinition
      SetTransferFeeDataProto: MessageTypeDefinition
      SetTransferFeeIxProto: MessageTypeDefinition
      SyncNativeAccountsProto: MessageTypeDefinition
      SyncNativeIxProto: MessageTypeDefinition
      ThawAccountAccountsProto: MessageTypeDefinition
      ThawAccountIxProto: MessageTypeDefinition
      TickArrayBitmapExtensionProto: MessageTypeDefinition
      TickArrayBitmapProto: MessageTypeDefinition
      TokenAccountProto: MessageTypeDefinition
      TokenExtensionProgramIxProto: MessageTypeDefinition
      TokenExtensionStateProto: MessageTypeDefinition
      TokenGroupIxProto: MessageTypeDefinition
      TokenGroupMemberProto: MessageTypeDefinition
      TokenGroupProto: MessageTypeDefinition
      TokenMetadataIxProto: MessageTypeDefinition
      TokenMetadataProto: MessageTypeDefinition
      TokenProgramIxProto: MessageTypeDefinition
      TokenProgramStateProto: MessageTypeDefinition
      TransferAccountsProto: MessageTypeDefinition
      TransferCheckedAccountsProto: MessageTypeDefinition
      TransferCheckedDataProto: MessageTypeDefinition
      TransferCheckedIxProto: MessageTypeDefinition
      TransferCheckedWithFeeAccountsProto: MessageTypeDefinition
      TransferCheckedWithFeeDataProto: MessageTypeDefinition
      TransferCheckedWithFeeIxProto: MessageTypeDefinition
      TransferDataProto: MessageTypeDefinition
      TransferFeeAmountProto: MessageTypeDefinition
      TransferFeeConfigProto: MessageTypeDefinition
      TransferFeeIxProto: MessageTypeDefinition
      TransferFeeProto: MessageTypeDefinition
      TransferHookAccountProto: MessageTypeDefinition
      TransferHookIxProto: MessageTypeDefinition
      TransferHookProto: MessageTypeDefinition
      TransferIxProto: MessageTypeDefinition
      TransferWithSplitProofsAccountsProto: MessageTypeDefinition
      TransferWithSplitProofsIxProto: MessageTypeDefinition
      UiAmountToAmountAccountsProto: MessageTypeDefinition
      UiAmountToAmountDataProto: MessageTypeDefinition
      UiAmountToAmountIxProto: MessageTypeDefinition
      UpdateAccountsProto: MessageTypeDefinition
      UpdateAuthorityAccountsProto: MessageTypeDefinition
      UpdateAuthorityDataProto: MessageTypeDefinition
      UpdateAuthorityIxProto: MessageTypeDefinition
      UpdateFieldAccountsProto: MessageTypeDefinition
      UpdateFieldDataProto: MessageTypeDefinition
      UpdateFieldIxProto: MessageTypeDefinition
      UpdateGroupAuthorityAccountsProto: MessageTypeDefinition
      UpdateGroupAuthorityDataProto: MessageTypeDefinition
      UpdateGroupAuthorityIxProto: MessageTypeDefinition
      UpdateGroupMaxSizeAccountsProto: MessageTypeDefinition
      UpdateGroupMaxSizeDataProto: MessageTypeDefinition
      UpdateGroupMaxSizeIxProto: MessageTypeDefinition
      UpdateIxProto: MessageTypeDefinition
      UpdateMintAccountsProto: MessageTypeDefinition
      UpdateMintIxProto: MessageTypeDefinition
      WhirlpoolProto: MessageTypeDefinition
      WhirlpoolRewardInfoProto: MessageTypeDefinition
      WhirlpoolsConfigProto: MessageTypeDefinition
      WithdrawAccountsProto: MessageTypeDefinition
      WithdrawExcessLamportsAccountsProto: MessageTypeDefinition
      WithdrawExcessLamportsIxProto: MessageTypeDefinition
      WithdrawIxProto: MessageTypeDefinition
      WithdrawWithheldTokensFromAccountsAccountsProto: MessageTypeDefinition
      WithdrawWithheldTokensFromAccountsDataProto: MessageTypeDefinition
      WithdrawWithheldTokensFromAccountsIxProto: MessageTypeDefinition
      WithdrawWithheldTokensFromMintAccountsProto: MessageTypeDefinition
      WithdrawWithheldTokensFromMintIxProto: MessageTypeDefinition
    }
  }
}

